--- a/dashboard/templates/dashboard/error403.html
+++ b/dashboard/templates/dashboard/error403.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
+{% extends "main/main.html" %}
+{% block title %}Forbidden{% endblock %}
+{% block head %} 
+
+{% load static %}
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -114,8 +116,8 @@
         <meta name="robots" content="noindex, follow">
         <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script defer="" src="/cdn-cgi/zaraz/s.js?executed=&amp;c=_ga%3DGA1.2.832375704.1641566163%3B+_gid%3DGA1.2.1499638489.1641566163%3B+PHPSESSID%3Dcd85fd0c9e1328a79246f6a39af2fb93&amp;t=404+HTML+Template+by+Colorlib&amp;w=1536&amp;h=864&amp;j=754&amp;e=1536&amp;l=https%3A%2F%2Fcolorlib.com%2Fetc%2F404%2Fcolorlib-error-404-3%2F&amp;r=https%3A%2F%2Fcolorlib.com%2Fwp%2Ftemplate%2Fcolorlib-error-404-3%2F&amp;k=24&amp;n=UTF-8&amp;o=-420"></script><script>(function(w,d){!function(e,t,r,a,s){e[r]=e[r]||{},e[r].executed=[],e.zaraz={deferred:[]};var n=t.getElementsByTagName("title")[0];e[r].c=t.cookie,n&&(e[r].t=t.getElementsByTagName("title")[0].text),e[r].w=e.screen.width,e[r].h=e.screen.height,e[r].j=e.innerHeight,e[r].e=e.innerWidth,e[r].l=e.location.href,e[r].r=t.referrer,e[r].k=e.screen.colorDepth,e[r].n=t.characterSet,e[r].o=(new Date).getTimezoneOffset(),//
         e[s]=e[s]||[],e.zaraz._preTrack=[],e.zaraz.track=(t,r)=>e.zaraz._preTrack.push([t,r]),e[s].push({"zaraz.start":(new Date).getTime()});var i=t.getElementsByTagName(a)[0],o=t.createElement(a);o.defer=!0,o.src="/cdn-cgi/zaraz/s.js?"+new URLSearchParams(e[r]).toString(),i.parentNode.insertBefore(o,i)}(w,d,"zarazData","script","dataLayer");})(window,document);</script>
-    </head>
-    <body>
+{% endblock %}
+{% block content %}
         <div id="notfound">
             <div class="notfound">
                 <div class="notfound-404">
@@ -123,7 +125,7 @@
                     <h1><span>4</span><span id="mid">0</span><span>3</span></h1>
                 </div>
                 <h2>we are sorry, but your request is forbidden</h2>
-                <button class="back"> &lt;&lt; &nbsp; Back to Homepage</button>
+                <button class="back" onclick="window.history.back()"> &lt;&lt; &nbsp; Back to Homepage</button>
             </div>
         </div>
         
@@ -136,5 +138,4 @@
           gtag('config', 'UA-23581568-13');
         </script>
         <script defer="" src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon="{&quot;rayId&quot;:&quot;6c9df9234f9ce49b&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;,&quot;version&quot;:&quot;2021.12.0&quot;,&quot;si&quot;:100}" crossorigin="anonymous"></script>
-    </body>
-</html>
+{% endblock %}
