--- a/static/dashboard/css/dashboard.css
+++ b/static/dashboard/css/dashboard.css
@@ -262,6 +262,14 @@ color: rgb(25, 39, 230)139, 201);
     opacity: 0;
 }
 
+.img-recommend {
+    cursor: pointer;
+}
+
+.recommend:hover {
+    transform: scale(1.05)
+}
+
 .note_rec{
     margin-top: 30px;
     margin-left: 7%;
@@ -274,10 +282,11 @@ color: rgb(25, 39, 230)139, 201);
     transition: 0.5s ease;
 }
 
-.notes_container {
+.notes-container {
     margin: 20px 20px;
     display: flex;
     flex-flow: row wrap;
+    align-items: flex-start;
 }
 
 .notes{
@@ -293,6 +302,18 @@ color: rgb(25, 39, 230)139, 201);
     margin-left: 10px;
     max-width: 150px;
     max-height: 300px;
+    cursor: pointer;
+}
+
+.notes:hover {
+    transform: scale(1.15);
+    box-shadow: 0 5px 30px 5px rgba(0,0,0,0.07);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.notes h4 {
+    cursor: pointer;
 }
 
 .search-more {
