--- a/static/dashboard/css/dashboard.css
+++ b/static/dashboard/css/dashboard.css
@@ -267,8 +267,12 @@ select{
     cursor: pointer;
 }
 
+.recommend {
+    transition: 0.5 ease;
+}
+
 .recommend:hover {
-    transform: scale(1.05)
+    transform: scale(1.05);
 }
 
 .note_rec{
@@ -287,7 +291,7 @@ select{
     margin: 20px 20px;
     display: flex;
     flex-flow: row wrap;
-    align-items: flex-start;
+    align-items: stretch;
 }
 
 .notes{
@@ -297,6 +301,7 @@ select{
     margin-bottom: 50px;
     margin-right: 30px;
     text-align: center;
+    transition: 0.7s ease;
 }
 
 .notes img{
@@ -360,6 +365,7 @@ select{
 
 .todo_item{
     padding-left: 2%;
+    color:white;
 }
 
 @media only screen and (max-width: 1500px) {
