--- a/static/dashboard/css/dashboard.css
+++ b/static/dashboard/css/dashboard.css
@@ -42,7 +42,7 @@
 .recommend img{
     margin-top: 0;
     width: 100%;
-    height: 100%;
+    min-height: 30vh;
     transition: 0.5s ease;
     object-fit: cover;
 }
@@ -271,9 +271,6 @@ select{
     transition: 0.5 ease;
 }
 
-.recommend:hover {
-    transform: scale(1.05);
-}
 
 .note_rec{
     margin-top: 30px;
