--- a/dashboard/templates/dashboard/about.html
+++ b/dashboard/templates/dashboard/about.html
@@ -52,7 +52,7 @@
     <div class="underline-heading"></div>
     <div class="creators-pic">
         <div class="creator-card">
-            <a href="https://github.com/ArnedyNavi"><img class="creator-pic" src = "/media/profile_images/profile.jpg" alt="Profile"></a>
+            <a href="https://github.com/ArnedyNavi"><img style="object-fit: cover; object-position: 50% 0px;" class="creator-pic" src = "{% static 'images/fon.jpg' %}" alt="Profile"></a>
             <div class="creator-name">Alfonsus Rodriques Rendy</div>
             <div class="creator-job">Full Stack Developer</div>
         </div>
